--- a/css/style.css
+++ b/css/style.css
@@ -143,13 +143,18 @@ img {
 .upper-bar {
   width: 940px;
   margin: 0 auto;
+  /* display: grid;
+  grid-column-start:1;
+grid-column-end:2;
+grid-template-columns:220px 1fr;
+grid-template-rows:42px;*/
+
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  /*
+
   display: grid;
   grid-template-columns: repeat(5, auto);
-  */
 }
 
 .logo {
@@ -179,6 +184,18 @@ img {
 .logo:active {
   background-color: var(--cardinal);
 }
+
+/*.user-block-menu {
+display:flex;
+justify-content:flex-end;
+align-items:center;
+margin:0;
+padding:0;
+list-style-type:none;
+font-size:18px;
+line-height:24px;
+color:var(--basic-white);
+}*/
 
 .footer.logo {
   padding: 20px 41px 25px 41px;
@@ -270,6 +287,16 @@ img {
   display: flex;
 }
 
+/*.user-block-favourites {
+  margin-left: auto;
+}
+  
+  .user-block-favourites a {
+  position: relative;
+  padding: 10px 0 8px 43px;
+}
+*/
+
 .header-btn-bookmarks,
 .header-btn-cart,
 .header-btn-order {
@@ -280,6 +307,7 @@ img {
   line-height: 24px;
   color: var(--white);
   padding: 9px 16px 9px 19px;
+  padding-right: 23px;
 }
 .header-btn-bookmarks {
   position: relative;
@@ -383,6 +411,7 @@ img {
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
+  /*padding-top: 41px;*/
   /*
   display: grid;
   grid-template-columns: repeat(3, auto);*/
@@ -442,6 +471,8 @@ img {
 
 .user-block-options-container {
   background-color: var(--white);
+  position: relative;
+
   /*grid-column: 1 / 3;*/
 }
 
@@ -450,6 +481,38 @@ img {
   grid-template-columns: repeat(3, min-content);*/
   display: flex;
   justify-content: space-between;
+  position: absolute;
+  bottom: 42px;
+  left: 45px;
+}
+
+/*.options-container::after {
+  top:10px;
+  right:162px;
+  width:4px;
+  height:4px;
+  background-color: var(--china-blue);
+  border-radius: 50%;
+}
+*/
+
+.personal-info:first-child {
+  position: relative;
+  padding-right: 30px;
+}
+
+.personal-info:first-child::after {
+  position: absolute;
+  content: "";
+  top: 7px;
+  right: 13px;
+  width: 4px;
+  height: 4px;
+  background-color: var(--china-blue);
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  z-index: 2;
 }
 
 /*Почему не белеет фон контейнера?*/
@@ -517,6 +580,7 @@ img {
   flex-direction: row;
   justify-content: space-around;
   padding: 0;
+  margin: 0;
 }
 
 .site-nav-item a {
@@ -796,13 +860,29 @@ img {
   line-height: 21px;
   color: var(--black);
   background-color: var(--white);
+  padding: 12px 57px 12px 56px;
+  position: relative;
 }
 
-.user-icons:hover {
+.user-pic {
+  position: absolute;
+  top: 13px;
+  left: 15px;
+}
+
+.log-out-icon {
+  position: absolute;
+  top: 4px;
+  left: 292px;
+}
+
+.user-pic:hover path,
+.log-out-icon:hover path {
   fill: var(--chambray);
 }
 
-.user-icons:active {
+.user-pic:active path,
+.log-out-icon:active path {
   fill: var(--silver);
 }
 
@@ -884,6 +964,44 @@ color: var(--gulf-blue);
 
 .product-card img {
   order: -1;
+  z-index: -2;
+}
+
+.product-card .bfg6000 {
+  position: absolute;
+  top: 22px;
+  left: 33px;
+}
+
+.product-card .bfg3000,
+.product-card .bfg2000 {
+  position: absolute;
+  top: 29px;
+  left: 40px;
+}
+
+.new-product {
+  display: block;
+  box-sizing: border-box;
+  width: 100px;
+  height: 30px;
+  padding-top: 8px;
+  font-family: Cuprum, Arial, sans-serif;
+
+  font-size: 14px;
+  line-height: 18px;
+  text-align: center;
+  color: var(--white);
+  text-transform: uppercase;
+  background-color: var(--amaranth);
+  z-index: -1;
+}
+
+.new-popular {
+  position: absolute;
+  top: -4px;
+  right: -26px;
+  transform: rotate(45deg);
 }
 
 .product-card {
@@ -893,10 +1011,14 @@ color: var(--gulf-blue);
   outline: 1px solid var(--whisper);
   outline-offset: -1px;
   width: 220px;
+  min-height: 318px;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-bottom: 20px;
+  position: relative;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
 .product-card:hover {
@@ -905,6 +1027,32 @@ color: var(--gulf-blue);
 
 .product-card:hover img {
   display: none;
+}
+
+.product-card:hover h3 {
+  order: 1;
+}
+
+.product-card:hover .old-price {
+  order: 2;
+}
+
+.product-card:hover .price {
+  order: 3;
+}
+
+.product-pop-up {
+  display: none;
+}
+
+.product-card:hover .product-pop-up {
+  position: absolute;
+  top: 38px;
+  right: 44px;
+
+  display: grid;
+  gap: 10px;
+  order: 0;
 }
 
 .product-card:hover .model-item-finalize {
@@ -923,9 +1071,15 @@ color: var(--gulf-blue);
   font-size: 18px;
   line-height: 20px;
   color: var(--black);
-  margin-left: 18px;
+  /*margin-left: 18px;
   margin-right: 17px;
+  */
   text-align: center;
+  position: absolute;
+  top: 179px;
+  left: 30px;
+  box-sizing: border-box;
+  width: 157px;
 }
 
 .product-card-image {
@@ -954,6 +1108,12 @@ color: var(--gulf-blue);
   height: 112px;
 }
 
+.price-container {
+  position: absolute;
+  bottom: 22px;
+  left: 78px;
+}
+
 .price {
   font-size: 17px;
   line-height: 18px;
@@ -961,7 +1121,6 @@ color: var(--gulf-blue);
   /*background-color: var(--amaranth);*/
   position: relative;
   z-index: 2;
-  padding-bottom: 22px;
 }
 
 .price::after {
@@ -983,6 +1142,10 @@ color: var(--gulf-blue);
   color: var(--dark-grey);
   text-decoration: line-through;
   padding-bottom: 16px;
+  box-sizing: border-box;
+  position: absolute;
+  left: 76px;
+  bottom: 43px;
 }
 
 .button-goods-buy {
@@ -991,6 +1154,10 @@ color: var(--gulf-blue);
   box-shadow: inset 0px -3px 0px var(--bilbao);
   width: 135px;
   position: relative;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-align: center;
+  box-sizing: border-box;
 }
 
 .button-goods-buy::before {
@@ -1002,7 +1169,8 @@ color: var(--gulf-blue);
   background-repeat: no-repeat;
   background-image: url(../img/icon-cart.svg);
   top: 10px;
-  left: 30px;
+  left: 22px;
+  opacity: 0.3;
 }
 
 .button-goods-buy:hover {
@@ -1015,8 +1183,14 @@ color: var(--gulf-blue);
 
 .button-goods-bookmarks {
   color: var(--gulf-blue);
-  border: 3px solid var(--apple);
-  /*width: 135px;*/
+  outline: 3px solid var(--apple);
+  outline-offset: -3px;
+  width: 135px;
+  height: 38px;
+  box-sizing: border-box;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-align: center;
 }
 
 .button-goods-bookmarks:hover {
@@ -1560,6 +1734,11 @@ color: var(--gulf-blue);
     }
     */
 
+.id-user-options-container {
+  padding-top: 41px;
+  position: relative;
+}
+
 .personal-info,
 .personal-info:visited {
   font-family: Cuprum, Arial, sans-serif;
@@ -1780,17 +1959,31 @@ color: var(--gulf-blue);
   border-bottom: 1px solid var(--amaranth);
 }
 
-.sort-by-option a:active {
-  color: var(--amaranth);
-  border-bottom: none;
+.down svg {
+  transform: rotate(-180deg);
+  padding-right: 17px;
+  padding-left: 21px;
 }
 
-.triangle-bg:hover {
+.up svg path,
+.down svg path {
+  fill: var(--silver);
+}
+
+.up svg:hover path,
+.down svg:hover path {
   fill: var(--black);
 }
 
-.triangle-bg:active {
-  fill: var(--amaranth);
+.up svg:active path,
+.down svg:active path {
+  fill: var(--black);
+  color: var(--amaranth);
+}
+
+.sort-by-option a:active {
+  color: var(--amaranth);
+  border-bottom: none;
 }
 
 .sorting-bar {
@@ -1870,6 +2063,18 @@ color: var(--gulf-blue);
   background-image: url(../img/checkbox-on.svg);
   background-position: 0 0;
   background-repeat: no-repeat;
+}
+
+.filter-input-radio:checked + label::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 18px;
+  height: 18px;
+  border: 4px solid var(--silver);
+
+  border-radius: 50%;
 }
 
 .filter-input-radio + label::before {
@@ -1996,23 +2201,55 @@ color: var(--gulf-blue);
   width: 700px;
 }
 
-.added-to-card-container {
+.added-to-card-inner-container {
   background-color: var(--white);
-  /*width: 620px;*/
+  width: 620px;
+  min-height: 282px;
+  border-top: 7px solid var(--amaranth);
+  border-bottom: 1px solid var(--amaranth);
+  position: relative;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  z-index: 2;
 }
 
-.added-to-card-container p {
+.added-to-card-inner-container::before {
+  position: absolute;
+  content: "";
+  width: 66px;
+  height: 66px;
+  background-image: url(../img/icon-mark.svg);
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  top: 62px;
+  left: 81px;
+}
+
+.added-to-card-inner-container p {
   font-family: Cuprum, Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 24px;
   line-height: 30px;
   color: var(--black);
+  position: absolute;
+  top: 60px;
+  text-align: center;
+  margin-left: 176px;
 }
 
 .cart-btns-container {
   background-color: var(--white-smoke);
   width: 620px;
+  height: 112px;
+  box-sizing: border-box;
+  /*padding-top: 37px;
+  padding-bottom: 37px;
+  padding-left: 114px;
+  padding-right: 112px;*/
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 .btn-continue-shopping,
@@ -2023,16 +2260,70 @@ color: var(--gulf-blue);
   font-size: 14px;
   line-height: 18px;
   color: var(--black);
-  /*width: 192px;*/
+  width: 192px;
 }
 
 .header-btn-order {
   background-color: var(--apple);
 }
 
-.btn-continue-shopping {
+.btn-order {
   color: var(--white);
   background-color: var(--amaranth);
+  box-sizing: border-box;
+  display: inline-block;
+  text-align: center;
+  width: 192px;
+  /*padding-left: 47px;
+  padding-right: 46px;*/
+  padding-top: 11px;
+  padding-bottom: 9px;
+  margin-top: 37px;
+  margin-left: 114px;
+}
+
+.btn-order:hover,
+.btn-continue-shopping:hover {
+  color: var(--white);
+  background-color: var(--cardinal);
+}
+
+.btn-continue-shopping {
+  color: var(--black);
+  background-color: var(--white);
+  width: 192px;
+  box-sizing: border-box;
+  display: inline-block;
+  padding-top: 11px;
+  padding-bottom: 9px;
+  /*padding-left: 32px;
+  padding-right: 31px;*/
+  text-align: center;
+  margin-top: 37px;
+  margin-left: 10px;
+}
+
+.close-btn-container {
+  position: absolute;
+  top: -2px;
+  right: 20px;
+}
+
+.close-btn {
+  position: relative;
+  border: none;
+}
+
+.close-btn::before {
+  position: absolute;
+  content: "";
+  background-image: url(../img/icon-close.svg);
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  width: 21px;
+  height: 21px;
+  top: 0;
+  left: 0;
 }
 
 .paginator-link:hover {
@@ -2043,7 +2334,7 @@ color: var(--gulf-blue);
   border: 1px solid var(--amaranth);
 }
 
-.paginator-link:first-child {
+.paginator-link.active {
   background-color: var(--amaranth);
   color: var(--white);
 }
@@ -2053,11 +2344,13 @@ color: var(--gulf-blue);
 }
 
 .paginator-link {
+  box-sizing: border-box;
   border: 1px solid var(--whisper);
   border-radius: 2px;
   width: 38px;
   height: 38px;
   padding: 10px 15px;
+  text-align: center;
 
   background-color: var(--white);
   font-family: "PT Sans", Arial, sans-serif;
@@ -2076,8 +2369,7 @@ color: var(--gulf-blue);
   flex-wrap: wrap;
   margin-left: 200px;
 }
-
-.perforators-about {
+*/ .perforators-about {
   width: 940px;
   margin: 0 auto;
 }
