--- a/css/style.css
+++ b/css/style.css
@@ -101,12 +101,12 @@
 }
 
 .page-body {
-  /*display: grid;
-  grid-template-rows: min-content 1fr min-content;*/
-  display: flex;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  /*display: flex;
   flex-direction: column;
   background-color: var(--white);
-  min-height: 100%;
+  min-height: 100%;*/
 }
 
 a {
@@ -682,6 +682,7 @@ search-field svg {
   grid-template-rows: 1fr 1fr 1fr;
   gap: 20px;
   margin: 0;
+  margin-top: 59px;
   padding: 0;
   list-style: none;
   width: 940px;
@@ -869,6 +870,7 @@ search-field svg {
   text-align: center;
   width: 192px;
   box-sizing: border-box;
+  z-index: 2;
 }
 
 .open-catalog-btn:hover {
@@ -914,13 +916,13 @@ search-field svg {
   padding: 0;
   width: 23px;
   height: 41px;
-  z-index: 2;
 }
 
 .slider-btn-forward svg {
   position: absolute;
-  right: 20px;
-  top: 122px;
+  top: 0;
+  left: 0;
+
   border: 0;
   outline: 0;
   padding: 0;
@@ -1409,7 +1411,7 @@ color: var(--gulf-blue);
   top: -47px;
   left: 230px;
 }
-
+.service-title,
 .service-titles {
   font-family: Cuprum, Arial, sans-serif;
   font-style: normal;
@@ -1417,6 +1419,13 @@ color: var(--gulf-blue);
   font-size: 30px;
   line-height: 30px;
   color: var(--black);
+}
+.service-titles {
+  padding-left: 50px;
+}
+
+.service-pitch {
+  padding-left: 50px;
 }
 
 .service-slide {
@@ -1471,7 +1480,7 @@ color: var(--gulf-blue);
 
 .service-btn-slider-wrapper {
   display: grid;
-  grid-template-columns: 3fr auto;
+  grid-template-columns: 3fr 9fr;
 }
 
 .service-slide.delivery {
@@ -1486,8 +1495,8 @@ color: var(--gulf-blue);
   background-image: url(../img/service-delivery.png);
   background-position: 0 0;
   background-repeat: no-repeat;
-  top: 20px;
-  left: 190px;
+  top: -8px;
+  left: 230px;
 }
 
 .service-slide.guarantee {
@@ -1502,8 +1511,8 @@ color: var(--gulf-blue);
   background-image: url(../img/service-guarantee.png);
   background-position: 0 0;
   background-repeat: no-repeat;
-  top: 20px;
-  left: 190px;
+  top: -28px;
+  left: 280px;
 }
 
 .service-slide.credit {
@@ -1518,7 +1527,7 @@ color: var(--gulf-blue);
   background-image: url(../img/service-credit.png);
   background-position: 0 0;
   background-repeat: no-repeat;
-  top: 20px;
+  top: -30px;
   left: 190px;
 }
 
@@ -1539,6 +1548,7 @@ color: var(--gulf-blue);
   box-sizing: border-box;
   padding-left: 8px;
   padding-right: 9px;
+  margin-left: 50px;
 }
 
 .want-credit-btn:hover {
@@ -2484,7 +2494,6 @@ color: var(--gulf-blue);
   flex-direction: column;
   padding: 0;
   border: 0;
-  border-bottom: 1px solid var(--silver);
 }
 
 .filter-by-charging {
@@ -2738,4 +2747,47 @@ color: var(--gulf-blue);
   80% {
     transform: translateX(10px);
   }
+}
+
+.slide-1 {
+  display: none;
+  background-image: url(../img/slide1-perforator.jpg);
+}
+
+.slide-2 {
+  background-image: url(../img/slide2-drill.jpg);
+  display: none;
+}
+
+.current {
+  display: block;
+}
+
+.slider-controls {
+  position: absolute;
+  bottom: 36px;
+  left: 295px;
+  display: flex;
+  justify-content: space-between;
+  width: 30px;
+}
+
+.slider-circle-1,
+.slider-circle-2 {
+  width: 10px;
+  height: 10px;
+  padding: 0;
+  background-color: var(--white);
+  border: 0;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.slider-circle-1:active,
+.slider-circle-2:active {
+  background-color: var(--amaranth);
+  border: 2px solid var(--white);
+  border-radius: 50%;
+  cursor: pointer;
+  outline: none;
 }
