--- a/css/style.css
+++ b/css/style.css
@@ -2,48 +2,48 @@
 
 @font-face {
   font-family: "PT Sans";
-  src: url("..fonts/ptsans.woff2") format("woff2"),
-    url("..fonts/ptsans.woff") format("woff");
+  src: url("../fonts/ptsans.woff2") format("woff2"),
+    url("../fonts/ptsans.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "PT Sans";
-  src: url("..fonts/ptsansbold.woff2") format("woff2"),
-    url("..fonts/ptsansbold.woff") format("woff");
+  src: url("../fonts/ptsansbold.woff2") format("woff2"),
+    url("../fonts/ptsansbold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Cuprum";
-  src: url("..fonts/cuprum.woff2") format("woff2"),
-    url("..fonts/cuprum.woff") format("woff");
+  src: url("../fonts/cuprum.woff2") format("woff2"),
+    url("../fonts/cuprum.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Cuprum";
-  src: url("..fonts/cuprumbold.woff2") format("woff2"),
-    url("..fonts/cuprumbold.woff") format("woff");
+  src: url("../fonts/cuprumbold.woff2") format("woff2"),
+    url("../fonts/cuprumbold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Cuprum";
-  src: url("..fonts/cuprumbolditalic.woff2") format("woff2"),
-    url("..fonts/cuprumbolditalic.woff") format("woff");
+  src: url("../fonts/cuprumbolditalic.woff2") format("woff2"),
+    url("../fonts/cuprumbolditalic.woff") format("woff");
   font-weight: 700;
   font-style: italic;
 }
 
 @font-face {
   font-family: "Cuprum";
-  src: url("..fonts/cuprumitalic.woff2") format("woff2"),
-    url("..fonts/cuprumitalic.woff") format("woff");
+  src: url("../fonts/cuprumitalic.woff2") format("woff2"),
+    url("../fonts/cuprumitalic.woff") format("woff");
   font-weight: 400;
   font-style: italic;
 }
@@ -89,6 +89,8 @@
   --white-024: rgba(0, 0, 0, 0.24);
   /*Shadows*/
   --bilbao: #367315;
+  --black-015: rgba(0, 0, 0, 0.15);
+  --black-025: rgba(0, 0, 0, 0.25);
   /*Borders*/
   --whisper: #e5e5e5;
   --pattens-blue: #d7dcde;
@@ -103,10 +105,6 @@
 .page-body {
   display: grid;
   grid-template-rows: min-content 1fr min-content;
-  /*display: flex;
-  flex-direction: column;
-  background-color: var(--white);
-  min-height: 100%;*/
 }
 
 a {
@@ -144,26 +142,7 @@ img {
 .upper-bar {
   width: 940px;
   margin: 0 auto;
-  /* display: grid;
-  grid-column-start:1;
-grid-column-end:2;
-grid-template-columns:220px 1fr;
-grid-template-rows:42px;*/
 
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-
-  display: grid;
-  grid-template-columns: repeat(5, auto);
-}
-
-.logo-container {
-  position: absolute;
-  top: 0;
-  left: 130px;
-  width: 220px;
-  height: 47px;
 }
 
 .logo {
@@ -176,6 +155,7 @@ grid-template-rows:42px;*/
   padding-right: 56px;
   position: relative;
   box-sizing: border-box;
+  float: left;
 }
 
 .logo::before {
@@ -194,17 +174,6 @@ grid-template-rows:42px;*/
   background-color: var(--cardinal);
 }
 
-/*.user-block-menu {
-display:flex;
-justify-content:flex-end;
-align-items:center;
-margin:0;
-padding:0;
-list-style-type:none;
-font-size:18px;
-line-height:24px;
-color:var(--basic-white);
-}*/
 
 .footer.logo {
   padding: 20px 41px 25px 41px;
@@ -226,10 +195,41 @@ color:var(--basic-white);
   padding-bottom: 25px;
 }
 
-.logo-search,
+.upper-bar-options {
+  display: flex;
+  flex-direction: space-between;
+}
+
+.search-field {
+  position: absolute;
+}
+
+.search-field label {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.search-window {
+  padding-left: 40px;
+  border: 0;
+  outline: 0;
+  font-family: Cuprum, Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 24px;
+  color: var(--white);
+  background-color: var(--bunting);
+  padding-top: 9px;
+  padding-bottom: 9px;
+  width: 271px;
+}
+
 .header-buttons {
   display: flex;
 }
+
 
 .container {
   width: 940px;
@@ -244,45 +244,25 @@ color:var(--basic-white);
   padding-bottom: 60px;
 }
 
-.colortext {
-  font-family: Cuprum, Arial, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 24px;
-  color: var(--white);
-  background-color: var(--bunting);
-  padding-top: 9px;
-  padding-bottom: 9px;
-  padding-left: 8px;
-  /*position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;*/
-}
-
-.colortext:focus {
+.search-window:focus {
   background-color: var(--white);
 }
 
-.colortext::-webkit-input-placeholder {
+.search-window::-webkit-input-placeholder {
   font-size: 18px;
   line-height: 24px;
   color: var(--basic-white);
 }
 
-.colortext::-moz-placeholder {
+.search-window::-moz-placeholder {
   color: var(--basic-white);
   opacity: 1;
 }
 
-.search-field {
-  position: relative;
-}
-
-search-field svg {
+.search-field svg {
   position: absolute;
   top: 12px;
+  left: 17px;
   z-index: 2;
 }
 
@@ -298,32 +278,26 @@ search-field svg {
   fill: var(--amaranth);
 }
 
-.search-field input {
+
+.search-window {
+  padding-left: 40px;
   border: 0;
   outline: 0;
+  font-family: Cuprum, Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 24px;
+  color: var(--white);
+  background-color: var(--bunting);
+  padding-top: 9px;
+  padding-bottom: 9px;
+  width: 271px;
 }
 
 .search-field:active input {
   background-color: var(--white);
 }
-
-/*.search-field input {
-  margin-left: 17px;
-  position: relative;
-}
-
-/*.search-field input::before {
-  content: "";
-  width: 17px;
-  height: 17px;
-  background-image: url("../img/icon-search.svg");
-  background-repeat: no-repeat;
-  background-position: 0 0;
-  position: absolute;
-  left: -8px;
-  top: 12px;
-}
-*/
 
 .search-field:active {
   opacity: 0.5;
@@ -342,20 +316,6 @@ search-field svg {
   opacity: 1;
 }
 
-.header-btn-wrapper {
-  display: flex;
-}
-
-/*.user-block-favourites {
-  margin-left: auto;
-}
-  
-  .user-block-favourites a {
-  position: relative;
-  padding: 10px 0 8px 43px;
-}
-*/
-
 .header-btn-bookmarks,
 .header-btn-cart,
 .header-btn-order {
@@ -366,12 +326,11 @@ search-field svg {
   line-height: 24px;
   color: var(--white);
   padding: 9px 16px 9px 19px;
+  padding-top: 8px;
   padding-right: 23px;
 }
 .header-btn-bookmarks {
   position: relative;
-  /*padding-left: 23px;*/
-  margin-right: 26px;
 }
 
 .header-btn-bookmarks svg {
@@ -383,27 +342,10 @@ search-field svg {
   opacity: 1;
 }
 
-/*.header-btn-bookmarks::before {
-  content: "";
-  width: 14px;
-  height: 16px;
-  background-image: url("../img/icon-bookmark.svg");
-  background-repeat: no-repeat;
-  background-position: 0 0;
-  position: absolute;
-  left: -9px;
-  top: 13px; 
-}
-*/
 
 .header-btn-bookmarks:hover {
   opacity: 1;
 }
-
-/*.header-btn-bookmarks:hover::before {
-  opacity: 1;
-}
-*/
 
 .header-btn-cart-full {
   font-family: Cuprum, Arial, sans-serif;
@@ -468,6 +410,7 @@ search-field svg {
 .header-btn-order:focus {
   background-color: var(--apple);
 }
+
 
 .main-header {
   width: 100%;
@@ -968,9 +911,8 @@ cursor: pointer;
 }
 
 .all-popular-brands a:hover {
-  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 4px 20px var(--black-015);
 }
-
 .all-popular-brands a:active {
   opacity: 0.5;
 }
@@ -980,7 +922,6 @@ cursor: pointer;
   margin: auto;
   object-fit: contain;
 }
-/*отцентровать логотипы!*/
 
 .user-block-name {
   font-family: Cuprum, Arial, sans-serif;
@@ -1168,7 +1109,7 @@ color: var(--gulf-blue);
 }
 
 .product-card:hover {
-  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 4px 20px var(--black-015);
 }
 
 .product-card:hover img {
@@ -1543,7 +1484,7 @@ color: var(--gulf-blue);
   height: 38px;
   padding-top: 10px;
   padding-bottom: 10px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 4px var(--black-025);
   border-radius: 2px;
   box-sizing: border-box;
   padding-left: 8px;
@@ -1616,7 +1557,7 @@ color: var(--gulf-blue);
   color: var(--white);
   background-color: var(--bunting);
 }
-
+.service-btn-delivery:checked,
 .service-btn-delivery:active,
 .service-btn-guarantee:active,
 .service-btn-credit:active {
@@ -1635,9 +1576,6 @@ color: var(--gulf-blue);
 .company-info-wrapper {
   display: flex;
   justify-content: space-around;
-  /*display: grid;
-  grid-template-columns: 8fr 4fr;
-  column-gap: 20px;*/
   margin-bottom: 70px;
 }
 
@@ -1737,7 +1675,7 @@ color: var(--gulf-blue);
   width: 620px;
   height: 430px;
   border-top: 7px solid var(--amaranth);
-  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 4px 20px var(--black-025);
   padding-top: 11px;
   background-color: var(--white);
 }
@@ -1821,7 +1759,7 @@ color: var(--gulf-blue);
   height: 449px;
   box-sizing: border-box;
   border-top: 7px solid var(--amaranth);
-  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 4px 20px var(--black-015);
   position: relative;
   padding: 0;
   background-color: var(--white);
@@ -2458,11 +2396,6 @@ color: var(--gulf-blue);
   cursor: pointer;
 }
 
-/*.range-controls .toggle-min {
-  left: 18px;
-}
-*/
-
 .range-controls .toggle-max {
   /*left: 120px;*/
   top: -8px;
@@ -2532,7 +2465,7 @@ color: var(--gulf-blue);
   border-bottom: 1px solid var(--amaranth);
   position: relative;
   box-sizing: border-box;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 4px var(--black-025);
   z-index: 2;
 }
 
