--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,42 @@
+@keyframes bounce {
+  0% {
+    transform: translateY(-2000px);
+  }
+
+  70% {
+    transform: translateY(30px);
+  }
+
+  90% {
+    transform: translateY(-10px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
+}
 /*Fonts*/
 
 @font-face {
@@ -134,6 +173,51 @@ img {
   overflow: hidden;
 }
 
+
+.slide-1 {
+  display: none;
+  background-image: url(../img/slide1-perforator.jpg);
+}
+
+.slide-2 {
+  background-image: url(../img/slide2-drill.jpg);
+  display: none;
+}
+
+.current {
+  display: block;
+}
+
+.slider-controls {
+  position: absolute;
+  bottom: 36px;
+  left: 295px;
+  display: flex;
+  justify-content: space-between;
+  width: 30px;
+}
+
+.slider-circle-1,
+.slider-circle-2 {
+  width: 10px;
+  height: 10px;
+  padding: 0;
+  background-color: var(--white);
+  border: 0;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.slider-circle-1:active,
+.slider-circle-2:active {
+  background-color: var(--amaranth);
+  border: 2px solid var(--white);
+  border-radius: 50%;
+  cursor: pointer;
+  outline: none;
+}
+
+
 .active,
 .service-btn-delivery:active,
 .service-btn-guarantee:active,
@@ -212,6 +296,51 @@ img {
   
 }
 
+.search-window {
+  border: 0;
+  outline: 0;
+  font-family: Cuprum, Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 24px;
+  color: var(--white);
+  background-color: var(--bunting);
+  padding-top: 9px;
+  padding-bottom: 9px;
+  padding-left: 41px;
+  width: 271px;
+}
+
+.search-window:focus-within {
+  color: var(--black);
+  background-color: var(--white);
+  border: none;
+}
+
+.search-window::-webkit-input-placeholder {
+  font-size: 18px;
+  line-height: 24px;
+  color: var(--white);
+}
+
+.search-window::-moz-placeholder {
+  color: var(--white);
+  opacity: 1;
+}
+
+.search-window:focus-within::-webkit-input-placeholder {
+  color: transparent;
+}
+
+.search-window:focus-within::-moz-placeholder {
+  color: transparent;
+}
+
+.search-window:focus-within:-ms-input-placeholder {
+  color: transparent;
+}
+
 .search-field {
   position: absolute;
 }
@@ -222,37 +351,6 @@ img {
   left: 0;
 }
 
-.search-window {
-  border: 0;
-  outline: 0;
-  font-family: Cuprum, Arial, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 24px;
-  color: var(--white);
-  background-color: var(--bunting);
-  padding-top: 9px;
-  padding-bottom: 9px;
-  padding-left: 41px;
-  width: 271px;
-}
-
-.search-window:focus {
-  background-color: var(--white);
-}
-
-.search-window::-webkit-input-placeholder {
-  font-size: 18px;
-  line-height: 24px;
-  color: var(--basic-white);
-}
-
-.search-window::-moz-placeholder {
-  color: var(--basic-white);
-  opacity: 1;
-}
-
 .search-field svg {
   position: absolute;
   top: 12px;
@@ -261,7 +359,7 @@ img {
 }
 
 .search-field:hover svg g,
-.search-field:focus svg g {
+.search-field:focus-within svg g {
   opacity: 1;
 }
 
@@ -270,57 +368,15 @@ img {
   background-color: var(--white);
 }
 
-.search-field:focus svg path {
+.search-field:focus-within svg path {
   fill: var(--amaranth);
 }
-
-.search-field:active input {
-  background-color: var(--white);
-}
-
-.search-field:active svg g {
-  opacity: 1;
-}
-
-.search-field:active svg path {
-  fill: var(--amaranth);
-}
-
-.search-window {
-  padding-left: 41px;
-  border: 0;
-  outline: 0;
-  font-family: Cuprum, Arial, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 24px;
-  color: var(--white);
-  background-color: var(--bunting);
-  padding-top: 9px;
-  padding-bottom: 9px;
-  width: 271px;
-}
-
 
 .header-buttons {
   display: flex;
   flex-direction: space-between;
+  margin-left: 270px;
 }
-
-.container {
-  width: 940px;
-  margin: 0 auto;
-  margin-bottom: 50px;
-}
-
-.main-bar {
-  width: 100%;
-  margin: 0 auto;
-  background-color: var(--alice-blue);
-  padding-bottom: 60px;
-}
-
 
 .header-btn-bookmarks,
 .header-btn-cart,
@@ -339,6 +395,10 @@ img {
   margin-right: 29px;
   padding-top: 7px;
   padding-bottom: 8px;
+}
+
+.header-btn-bookmarks.catalog {
+  margin-right: 17px;
 }
 
 .header-btn-bookmarks svg {
@@ -671,6 +731,21 @@ img {
   opacity: 0.5;
   background-color: var(--midnight-express);
 }
+
+
+.container {
+  width: 940px;
+  margin: 0 auto;
+  margin-bottom: 50px;
+}
+
+.main-bar {
+  width: 100%;
+  margin: 0 auto;
+  background-color: var(--alice-blue);
+  padding-bottom: 60px;
+}
+
 
 .features-list {
   display: grid;
@@ -1010,10 +1085,9 @@ img {
   font-size: 21px;
   line-height: 21px;
   color: var(--black);
-  background-color: var(--white);
-  padding: 12px 57px 12px 56px;
+  background-color: var(--amaranth);
+  padding: 6px 57px 15px 57px;
   position: relative;
-}
 
 .user-pic {
   position: absolute;
@@ -2088,8 +2162,7 @@ padding-bottom: 20px;
   display: flex;
 }
 .id-user-options-container {
-  padding-top: 41px;
-  position: relative;
+  padding-top: 55px;
 }
 
 .personal-info,
@@ -2721,8 +2794,6 @@ padding-bottom: 20px;
 }
 
 .paginator {
-  /*display: grid;
-  grid-template-columns: 38px 38px 38px 140px;*/
   display: flex;
   flex-wrap: wrap;
   margin-left: 200px;
@@ -2753,87 +2824,4 @@ padding-bottom: 20px;
   line-height: 24px;
   color: var(--black);
   padding-bottom: 68px;
-}
-
-@keyframes bounce {
-  0% {
-    transform: translateY(-2000px);
-  }
-
-  70% {
-    transform: translateY(30px);
-  }
-
-  90% {
-    transform: translateY(-10px);
-  }
-
-  100% {
-    transform: translateY(0);
-  }
-}
-
-@keyframes shake {
-  0%,
-  100% {
-    transform: translateX(0);
-  }
-
-  10%,
-  30%,
-  50%,
-  70%,
-  90% {
-    transform: translateX(-10px);
-  }
-
-  20%,
-  40%,
-  60%,
-  80% {
-    transform: translateX(10px);
-  }
-}
-
-.slide-1 {
-  display: none;
-  background-image: url(../img/slide1-perforator.jpg);
-}
-
-.slide-2 {
-  background-image: url(../img/slide2-drill.jpg);
-  display: none;
-}
-
-.current {
-  display: block;
-}
-
-.slider-controls {
-  position: absolute;
-  bottom: 36px;
-  left: 295px;
-  display: flex;
-  justify-content: space-between;
-  width: 30px;
-}
-
-.slider-circle-1,
-.slider-circle-2 {
-  width: 10px;
-  height: 10px;
-  padding: 0;
-  background-color: var(--white);
-  border: 0;
-  border-radius: 50%;
-  cursor: pointer;
-}
-
-.slider-circle-1:active,
-.slider-circle-2:active {
-  background-color: var(--amaranth);
-  border: 2px solid var(--white);
-  border-radius: 50%;
-  cursor: pointer;
-  outline: none;
 }
